refactor(apps/server/controller): rename login body parameter code to authenticationCode
